@@ -12,6 +12,13 @@ What's New in Python 3.0 final
 Core and Builtins
 -----------------
 
+- Issue #3996: On Windows, the PyOS_CheckStack function would cause the
+  interpreter to abort ("Fatal Python error: Could not reset the stack!")
+  instead of throwing a MemoryError.
+
+- Issue #4367: Python would segfault during compiling when the unicodedata
+  module couldn't be imported and \N escapes were present.
+
 Library
 -------
 
@@ -47,6 +54,9 @@ Core and Builtins
 
 Library
 -------
+
+- Issue #4363: The uuid.uuid1() and uuid.uuid4() functions now work even if
+  the ctypes module is not present.
 
 - FileIO's mode attribute now always includes ``"b"``.
 
